Restored to 'd1582a4e2cdfca485a0d731ed81be1dbe2972f3a'
Replit-Restored-To: d1582a4e2cdfca485a0d731ed81be1dbe2972f3a

--- a/client/index.html
+++ b/client/index.html
@@ -2,30 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <title>3Blox - The Skill Game</title>
-    <style>
-      * {
-        -webkit-tap-highlight-color: transparent;
-        -webkit-touch-callout: none;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-      body {
-        touch-action: manipulation;
-        overscroll-behavior: none;
-      }
-      input, textarea {
-        -webkit-user-select: text;
-        -moz-user-select: text;
-        -ms-user-select: text;
-        user-select: text;
-      }
-    </style>
   </head>
   <body>
     <div id="root"></div>
